# thunder

./: pyproject.toml  requirements.txt
.github/workflows/: unittests.yml  wf.yml
tests/: mnist.py  t_compute_configs.py  t_dimensional_tensor.py  t_module.py  t_save_load.py  t_training.py  t_wandb.py  tox.ini
thunder/configs/: __init__.py  compute.py  run.py
thunder/dtypes/: __init__.py  target.py  tensors.py
thunder/logging/: __init__.py  loggers.py  metric.py  wblogger.py
thunder/module/: __init__.py  compute_configurable.py  configs.py  configurable.py  descent.py  logging.py  managed.py  thunder.py  viewer.py
